--- a/inventory/stage/inventory/hap.yml
+++ b/inventory/stage/inventory/hap.yml
@@ -6,8 +6,8 @@ all:
       ansible_port: 8933
       disk:
         mount_sizes:
-          - '/': '18.53 GB'
-          - '/boot': '0.95 GB'
+          - /: 18.53 GB
+          - /boot: 0.95 GB
         lvm:
           lvs:
             ubuntu-lv:
@@ -33,8 +33,8 @@ all:
       ansible_port: 8933
       disk:
         mount_sizes:
-          - '/': '18.53 GB'
-          - '/boot': '0.95 GB'
+          - /: 18.53 GB
+          - /boot: 0.95 GB
         lvm:
           lvs:
             ubuntu-lv:
@@ -60,8 +60,8 @@ all:
       ansible_port: 8933
       disk:
         mount_sizes:
-          - '/': '18.53 GB'
-          - '/boot': '0.95 GB'
+          - /: 18.53 GB
+          - /boot: 0.95 GB
         lvm:
           lvs:
             ubuntu-lv:
