--- a/inventory/group_vars/gitlab.yml
+++ b/inventory/group_vars/gitlab.yml
@@ -10,4 +10,13 @@ access_list:
     - name: minio
       ports:
         - 32001
-  singles: {}
+  singles:
+    - name: 172.20.36.5 # bs-kube-hapvip
+      ports:
+        - 8443
+    - name: 172.20.36.6 # bs-kube-hapvip
+      ports:
+        - 8443
+    - name: 172.20.36.7 # bs-kube-hapvip
+      ports:
+        - 8443
