add localhost host_check

--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -1,2 +1,33 @@
 timesyncd_server: 172.20.24.34
 pip_repo: "https://repo.asax.ir/repository/pypi-group1/simple"
+
+access_check_single: "test-host:8080"
+
+local_access_list:
+  groups:
+    - name: hap
+      ports:
+        - 443
+        - 8933
+    - name: lb
+      ports:
+        - 8933
+    - name: master
+      ports:
+        - 8933
+    - name: worker
+      ports:
+        - 8933
+        - 80
+        - 443
+    - name: gitlab
+      ports:
+        - 8933
+    - name: minio
+      ports:
+        - 8933
+    - name: keycloak
+      ports:
+        - 8933
+
+  singles: {}
