--- a/inventory/group_vars/master.yml
+++ b/inventory/group_vars/master.yml
@@ -8,7 +8,7 @@ access_list:
         - 8443
         - 8933
         - 10250
-  #     - 4789  #   protocol: UDP  # Todo: add UDP support to acces_check
+        # - 4789/UDP
     - name: gitlab
       ports:
         - 443
@@ -22,4 +22,3 @@ access_list:
     - name: 172.20.29.94 # bs-kube-lbvip
       ports:
         - 6443
-
