--- a/inventory/group_vars/worker.yml
+++ b/inventory/group_vars/worker.yml
@@ -2,7 +2,7 @@ access_list:
   groups:
     - name: master
       ports:
-        # - 4789 # Protocol: UDP # Todo: Support UDP
+        # - 4789/UDP
         - 6443
         - 10250
     - name: lb
