--- a/inventory/group_vars/keycloak.yml
+++ b/inventory/group_vars/keycloak.yml
@@ -1,3 +1,14 @@
 access_list:
   groups: {}
-  singles: {}
+  singles:
+    - name: gitops.asax.ir
+      ports:
+        - 443
+    - name: repo.asax.ir
+      ports:
+        - 80
+        - 443
+    - name: azure.asax.ir
+      ports:
+        - 80
+        - 443
