--- a/inventory/group_vars/worker.yml
+++ b/inventory/group_vars/worker.yml
@@ -20,6 +20,17 @@ access_list:
       ports:
         - 32001
   singles:
+    - name: gitops.asax.ir
+      ports:
+        - 443
+    - name: repo.asax.ir
+      ports:
+        - 80
+        - 443
+    - name: azure.asax.ir
+      ports:
+        - 80
+        - 443
     - name: cliq.zoho.com
       ports:
         - 443
