--- a/inventory/inventory/master.yml
+++ b/inventory/inventory/master.yml
@@ -1,124 +1,69 @@
 ---
 master:
   hosts:
-    bs-kube-m1:
-      ansible_host: 172.20.29.66
+    p2-kube-m1:
+      ansible_host: 192.168.146.50
       ansible_port: 8933
       disk:
         mount_sizes:
-        - /: 13.68 GB
-        - /boot: 1.36 GB
-        - /home: 3.37 GB
-        - /var: 40.18 GB
-        - /var/log: 9.75 GB
+          - /: 20.56 GB
+          - /boot: 1.44 GB
+          - /home: 3.86 GB
+          - /var: 13.73 GB
+          - /var/log: 2.88 GB
         lvm:
           lvs:
-            lv-0:
-              size_g: '10.00'
-              vg: vg3
+            lv-home:
+              size_g: '4.00'
+              vg: vg-home
+            lv-root:
+              size_g: '20.99'
+              vg: vg-root
+            lv-var:
+              size_g: '13.99'
+              vg: vg-var
+            lv-varlog:
+              size_g: '3.00'
+              vg: vg-varlog
           pvs:
             /dev/sda3:
-              size_g: '14.58'
-              vg: ubuntu-vg
-            /dev/sdb:
-              size_g: '21.00'
-              vg: vg0
-            /dev/sdc:
+              size_g: '8.00'
+              vg: vg-root
+            /dev/sda4:
               size_g: '2.00'
-              vg: vg1
-            /dev/sdd:
+              vg: vg-var
+            /dev/sda5:
+              size_g: '3.00'
+              vg: vg-varlog
+            /dev/sda6:
               size_g: '4.00'
-              vg: vg2
-            /dev/sde:
-              size_g: '11.00'
-              vg: vg3
-            /dev/sdf1:
-              size_g: '20.00'
-              vg: vg0
+              vg: vg-home
+            /dev/sda7:
+              size_g: '12.00'
+              vg: vg-var
+            /dev/sda8:
+              size_g: '13.00'
+              vg: vg-root
           vgs:
-            ubuntu-vg:
-              num_lvs: '1'
-              num_pvs: '1'
-              size_g: '14.58'
-            vg0:
-              num_lvs: '1'
-              num_pvs: '2'
-              size_g: '40.99'
-            vg1:
-              num_lvs: '0'
-              num_pvs: '1'
-              size_g: '2.00'
-            vg2:
+            vg-home:
               num_lvs: '1'
               num_pvs: '1'
               size_g: '4.00'
-            vg3:
+            vg-root:
+              num_lvs: '1'
+              num_pvs: '2'
+              size_g: '20.99'
+            vg-var:
+              num_lvs: '1'
+              num_pvs: '2'
+              size_g: '13.99'
+            vg-varlog:
               num_lvs: '1'
               num_pvs: '1'
-              size_g: '11.00'
+              size_g: '3.00'
       network:
         netmask: 28
-        gateway: 172.20.29.65
+        gateway: 192.168.146.49
       resource:
         vcpu: 4
-        memory: 7945
-    bs-kube-m2:
-      ansible_host: 172.20.29.67
-      ansible_port: 8933
-      disk:
-        mount_sizes:
-          - /: 39.19 GB
-          - /boot: 0.95 GB
-        lvm:
-          lvs:
-            ubuntu-lv:
-              size_g: '39.99'
-              vg: ubuntu-vg
-          pvs:
-            /dev/sda3:
-              size_g: '20.00'
-              vg: ubuntu-vg
-            /dev/sdb1:
-              size_g: '20.00'
-              vg: ubuntu-vg
-          vgs:
-            ubuntu-vg:
-              num_lvs: '1'
-              num_pvs: '2'
-              size_g: '39.99'
-      network:
-        netmask: 28
-        gateway: 172.20.29.65
-      resource:
-        vcpu: 4
-        memory: 7915
-    bs-kube-m3:
-      ansible_host: 172.20.29.68
-      ansible_port: 8933
-      disk:
-        mount_sizes:
-          - /: 39.19 GB
-          - /boot: 0.95 GB
-        lvm:
-          lvs:
-            lv-0:
-              size_g: '39.99'
-              vg: ubuntu-vg
-          pvs:
-            /dev/sda3:
-              size_g: '20.00'
-              vg: ubuntu-vg
-            /dev/sdb1:
-              size_g: '20.00'
-              vg: ubuntu-vg
-          vgs:
-            ubuntu-vg:
-              num_lvs: '1'
-              num_pvs: '2'
-              size_g: '39.99'
-      network:
-        netmask: 28
-        gateway: 172.20.29.65
-      resource:
-        vcpu: 4
-        memory: 7945
+        memory: 7957
