--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -1,6 +1,6 @@
 timesyncd_server: 172.20.24.34
 pip_repo: "https://repo.asax.ir/repository/pypi-group1/simple"
-
+splunk_server: 172.20.26.21:8089
 access_check_single: "test-host:8080"
 
 local_access_list:
