--- a/inventory/inventory/worker.yml
+++ b/inventory/inventory/worker.yml
@@ -11,11 +11,15 @@ worker:
           - /home: 3.37 GB
           - /var: 19.52 GB
           - /var/log: 9.75 GB
+          - /mnt/nfs: 98.12 GB
         lvm:
           lvs:
             lv-0:
               size_g: '3.50'
               vg: vg3
+            nfs-lv:
+              size_g: '100.00'
+              vg: nfs-vg
           pvs:
             /dev/sda3:
               size_g: '14.58'
@@ -32,7 +36,14 @@ worker:
             /dev/sde:
               size_g: '11.00'
               vg: vg0
+            /dev/sdf:
+              size_g: '100.00'
+              vg: nfs-vg
           vgs:
+            nfs-vg:
+              num_lvs: '1'
+              num_pvs: '1'
+              size_g: '100.00'
             ubuntu-vg:
               num_lvs: '1'
               num_pvs: '1'
@@ -69,6 +80,7 @@ worker:
           - /var: 19.52 GB
           - /home: 3.37 GB
           - /var/log: 9.25 GB
+          - /mnt/nfs: 98.12 GB
         lvm:
           lvs:
             lv-0:
@@ -120,6 +132,7 @@ worker:
           - /var: 19.52 GB
           - /home: 3.37 GB
           - /var/log: 9.75 GB
+          - /mnt/nfs: 98.12 GB
         lvm:
           lvs:
             lv-0:
@@ -171,6 +184,7 @@ worker:
         mount_sizes:
           - /: 29.42 GB
           - /boot: 0.95 GB
+          - /mnt/nfs: 98.12 GB
         lvm:
           lvs:
             ubuntu-lv:
@@ -199,16 +213,20 @@ worker:
       ansible_port: 8933
       disk:
         mount_sizes:
-          - /: 30.40 GB
+          - /: 44.17 GB
           - /boot: 0.95 GB
+          - /mnt/nfs: 98.12 GB
         lvm:
           lvs:
             ubuntu-lv:
-              size_g: '30.99'
+              size_g: '44.99'
               vg: ubuntu-vg
           pvs:
             /dev/sda3:
               size_g: '15.00'
+              vg: ubuntu-vg
+            /dev/sda4:
+              size_g: '14.00'
               vg: ubuntu-vg
             /dev/sdb1:
               size_g: '16.00'
@@ -216,8 +234,8 @@ worker:
           vgs:
             ubuntu-vg:
               num_lvs: '1'
-              num_pvs: '2'
-              size_g: '30.99'
+              num_pvs: '3'
+              size_g: '44.99'
       network:
         netmask: 27
         gateway: 172.20.29.33
@@ -234,6 +252,7 @@ worker:
           - /home: 3.37 GB
           - /var: 19.52 GB
           - /var/log: 9.75 GB
+          - /mnt/nfs: 98.12 GB
         lvm:
           lvs:
             lv-0:
@@ -262,7 +281,7 @@ worker:
         gateway: 172.20.29.33
       resource:
         vcpu: 4
-        memory: 16001        
+        memory: 15989
     bs-kube-w7:
       ansible_host: 172.20.29.50
       ansible_port: 8933
@@ -273,7 +292,7 @@ worker:
           - /boot: 1.90 GB
           - /var: 19.52 GB
           - /var/log: 9.75 GB
-
+          - /mnt/nfs: 98.12 GB
         lvm:
           lvs:
             lv-0:
@@ -302,7 +321,7 @@ worker:
         gateway: 172.20.29.33
       resource:
         vcpu: 4
-        memory: 16001                
+        memory: 15989
     bs-kube-w8:
       ansible_host: 172.20.29.51
       ansible_port: 8933
@@ -312,7 +331,8 @@ worker:
           - /boot: 1.90 GB
           - /var: 19.52 GB
           - /home: 3.37 GB
-          - /var/log: 9.75 GB      
+          - /var/log: 9.75 GB
+          - /mnt/nfs: 98.12 GB
         lvm:
           lvs:
             lv-0:
@@ -341,7 +361,7 @@ worker:
         gateway: 172.20.29.33
       resource:
         vcpu: 4
-        memory: 16001         
+        memory: 15989
     bs-kube-w9:
       ansible_host: 172.20.29.52
       ansible_port: 8933
@@ -353,7 +373,6 @@ worker:
           - /mnt/nfs: 98.12 GB
           - /var: 19.52 GB
           - /var/log: 9.75 GB
-
         lvm:
           lvs:
             lv-0:
@@ -382,7 +401,7 @@ worker:
         gateway: 172.20.29.33
       resource:
         vcpu: 4
-        memory: 16001
+        memory: 15989
     bs-kube-w10:
       ansible_host: 172.20.29.53
       ansible_port: 8933
@@ -391,6 +410,7 @@ worker:
           - /: 13.68 GB
           - /boot: 1.90 GB
           - /home: 3.37 GB
+          - /mnt/nfs: 98.12 GB
           - /var: 19.52 GB
           - /var/log: 9.75 GB
         lvm:
@@ -421,4 +441,4 @@ worker:
         gateway: 172.20.29.33
       resource:
         vcpu: 4
-        memory: 16001
+        memory: 15989
