--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,26 +10,31 @@ stages:
 update_submodule_job:
   stage: update_submodule
   script:
+    # Configure Git with the CI-specific user identity
+    - git config user.email "bot@gitops.asax.ir"
+    - git config user.name "GitLab CI Bot"
+
     # Extract the SSH URL from .gitmodules and convert it to HTTPS format using provided auth variables
     - SUBMODULE_SSH_URL=$(git config --file .gitmodules --get submodule.hostcheck.url)
     - SUBMODULE_HTTPS_URL=$(echo $SUBMODULE_SSH_URL | sed -e "s/git@\(.*\):/https:\/\/$GITLAB_AUTH_USERNAME:$GITLAB_AUTH_TOKEN@\1\//")
     - git config submodule.hostcheck.url "$SUBMODULE_HTTPS_URL"
     - git submodule update --init --recursive --remote
 
-    # Configure Git with the CI-specific user identity
-    - git config user.email "bot@gitops.asax.ir"
-    - git config user.name "GitLab CI Bot"
-
-    # Commit the updated submodule reference
-    - SUBMODULE_COMMIT=$(git -C hostcheck rev-parse HEAD)
+    # Check for changes in the submodule. If there are changes, proceed with commit and push
+    - git diff --exit-code || HAS_CHANGES=$?
     - |
-      git commit -am "Update submodule to latest commit: $SUBMODULE_COMMIT [skip ci]"
+      if [ "$HAS_CHANGES" != "0" ]; then
+        # Commit the updated submodule reference
+        SUBMODULE_COMMIT=$(git -C hostcheck rev-parse HEAD)
+        git commit -am "Update submodule to latest commit: $SUBMODULE_COMMIT [skip ci]"
 
-    # Set the remote URL to the current project URL with authentication for push
-    - |
-      git remote set-url origin https://$GITLAB_AUTH_USERNAME:$GITLAB_AUTH_TOKEN@$(echo $CI_PROJECT_URL | sed -e 's|https://||')
+        # Set the remote URL to the current project URL with authentication for push
+        git remote set-url origin https://$GITLAB_AUTH_USERNAME:$GITLAB_AUTH_TOKEN@$(echo $CI_PROJECT_URL | sed -e 's|https://||')
 
-    # Push the changes
-    - git push origin HEAD:main
+        # Push the changes
+        git push origin HEAD:main
+      else
+        echo "No changes in the submodule. Skipping commit and push."
+      fi
   only:
     - main
