--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,25 +18,22 @@ update_submodule_job:
     - SUBMODULE_SSH_URL=$(git config --file .gitmodules --get submodule.hostcheck.url)
     - SUBMODULE_HTTPS_URL=$(echo $SUBMODULE_SSH_URL | sed -e "s/git@\(.*\):/https:\/\/$GITLAB_AUTH_USERNAME:$GITLAB_AUTH_TOKEN@\1\//")
     - git config submodule.hostcheck.url "$SUBMODULE_HTTPS_URL"
-
-    # Update the submodule
     - git submodule update --init --recursive --remote
 
-    # Check for changes in the submodule. If there are changes, proceed with commit and push
-    - git diff --exit-code || HAS_CHANGES=$?
+    # Directly use git diff to check for changes and conditionally execute the next steps
     - |
-      if [ "$HAS_CHANGES" != "0" ]; then
-        # Commit the updated submodule reference
-        SUBMODULE_COMMIT=$(git -C hostcheck rev-parse HEAD)
-        git commit -am "Update submodule to latest commit: $SUBMODULE_COMMIT [skip ci]"
+      if ! git diff --quiet; then
+        # There are changes, proceed with commit and push
+        SUBMODULE_COMMIT=$(git -C hostcheck rev-parse HEAD);
+        git commit -am "Update submodule to latest commit: $SUBMODULE_COMMIT [skip ci]";
 
         # Set the remote URL to the current project URL with authentication for push
-        git remote set-url origin https://$GITLAB_AUTH_USERNAME:$GITLAB_AUTH_TOKEN@$(echo $CI_PROJECT_URL | sed -e 's|https://||')
+        git remote set-url origin https://$GITLAB_AUTH_USERNAME:$GITLAB_AUTH_TOKEN@$(echo $CI_PROJECT_URL | sed -e 's|https://||');
 
         # Push the changes
-        git push origin HEAD:main
+        git push origin HEAD:main;
       else
-        echo "No changes in the submodule. Skipping commit and push."
+        echo "No changes in the submodule. Skipping commit and push.";
       fi
   only:
     - main
