--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,17 +21,18 @@ update_submodule_job:
     - git submodule update --init --recursive --remote
 
     # Directly use git diff to check for changes and conditionally execute the next steps
-    - |
+    - >
       if ! git diff --quiet; then
-        # There are changes, proceed with commit and push
-        SUBMODULE_COMMIT=$(git -C hostcheck rev-parse HEAD);
-        git commit -am "Update submodule to latest commit: $SUBMODULE_COMMIT [skip ci]";
+        # Checkout a new branch for the submodule update
+        BRANCH_NAME="submodule-update-$(date +%Y%m%d-%H%M%S)"
+        git checkout -b $BRANCH_NAME
 
-        # Set the remote URL to the current project URL with authentication for push
-        git remote set-url origin https://$GITLAB_AUTH_USERNAME:$GITLAB_AUTH_TOKEN@$(echo $CI_PROJECT_URL | sed -e 's|https://||');
+        # Commit the updated submodule reference
+        SUBMODULE_COMMIT=$(git -C hostcheck rev-parse HEAD)
+        git commit -am "Update submodule to latest commit: $SUBMODULE_COMMIT [skip ci]"
 
-        # Push the changes
-        git push origin HEAD:main;
+        # Push the new branch
+        git push -o merge_request.create -o merge_request.target=main https://$GITLAB_AUTH_USERNAME:$GITLAB_AUTH_TOKEN@$(echo $CI_PROJECT_URL | sed -e 's|https://||') HEAD
       else
         echo "No changes in the submodule. Skipping commit and push.";
       fi
