--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,7 +63,7 @@ ansible_run:
     - SUBMODULE_HTTPS_URL=$(git config --file .gitmodules --get submodule.hostcheck.url)
     - SUBMODULE_HTTPS_URL_CREDENTIALS=$(echo $SUBMODULE_HTTPS_URL | sed -e "s/https:\/\/\(.*\):/https:\/\/$GITLAB_AUTH_USERNAME:$GITLAB_AUTH_TOKEN@\1\//")
     - git config submodule.hostcheck.url "$SUBMODULE_HTTPS_URL_CREDENTIALS"
-    - curl https://gitops.asax.ir -k 
+    - echo $SUBMODULE_HTTPS_URL_CREDENTIALS
     - git submodule update --init --recursive --remote
 
     - apt-get update
