resolve credentials issue

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,7 +61,7 @@ ansible_run:
     - git config user.email "bot@gitops.asax.ir"
     - git config user.name "GitLab CI Bot"
     - SUBMODULE_HTTPS_URL=$(git config --file .gitmodules --get submodule.hostcheck.url)
-    - SUBMODULE_HTTPS_URL_WITH_CREDENTIALS=$(echo $SUBMODULE_HTTPS_URL | sed "s#https://#https://$GITLAB_AUTH_TOKEN:$GITLAB_AUTH_USERNAME@#")
+    - SUBMODULE_HTTPS_URL_WITH_CREDENTIALS=$(echo $SUBMODULE_HTTPS_URL | sed "s#https://#https://$GITLAB_AUTH_USERNAME:$GITLAB_AUTH_TOKEN@#")
     - git config submodule.hostcheck.url "$SUBMODULE_HTTPS_URL_WITH_CREDENTIALS"
     - echo $SUBMODULE_HTTPS_URL_WITH_CREDENTIALS
     - git submodule update --init --recursive --remote
