--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,7 +56,7 @@ ansible_run:
     - sre-ansible
   image:
     name: repo.asax.ir/python:3.12.2-slim-bullseye
-    entrypoint: [""]
+    # entrypoint: [""]
   when: manual
   script:
     # Clone submodules
