--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,6 +75,8 @@ ansible_run:
    # - apt-get install -y git
     - cd hostcheck
     - ls
+    - which python3
+    - ls /usr/local/bin/python3
     #- python3 -m venv .venv
     #- source .venv/bin/activate
     - /usr/local/bin/python3 -m pip install -r requirements.txt  --default-timeout=180 --index-url=https://$PYPI_REGISTRY_USER:$PYPI_REGISTRY_PASSWORD@$PYPI_REGISTRY/repository/pypi-group1/simple
