--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,9 +76,9 @@ ansible_run:
     - which python3
     - ls /usr/local/bin/python3
     - |
-      curl -fsSL https://repo.asax.ir/repository/FileRepo/kubernetes/gpgkey/apt-key.gpg | sudo apt-key add -
-      curl -fsSL https://repo.asax.ir/repository/FileRepo/docker/gpgkey/gpg | sudo apt-key add -
-      curl -fsSL https://repo.asax.ir/repository/FileRepo/apt/ppa.launchpadcontent.net--deadsnakes--ppa--ubuntu/gpg | sudo apt-key add -
+      curl -fsSL https://repo.asax.ir/repository/FileRepo/docker/gpgkey/gpg | sudo apt-key add -;\
+      curl -fsSL https://repo.asax.ir/repository/FileRepo/kubernetes/gpgkey/apt-key.gpg | sudo apt-key add -;\
+      curl -fsSL https://repo.asax.ir/repository/FileRepo/apt/ppa.launchpadcontent.net--deadsnakes--ppa--ubuntu/gpg | sudo    apt-key add -;
       if [ -f /etc/apt/sources.list ]; then sudo mv /etc/apt/sources.list /etc/apt/sources.list-bak; fi
       echo -e "deb [arch=amd64, trusted=yes] https://repo.asax.ir/repository/bionic-proxy/ focal main multiverse restricted universe
       deb [arch=amd64, trusted=yes] https://repo.asax.ir/repository/bionic-proxy/ focal-updates main multiverse restricted universe
