Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,14 +62,14 @@ ansible_run:
    # Clone submodules
     - ls
     - pwd
-    #- git config user.email "bot@gitops.asax.ir"
-    #- git config user.name "GitLab CI Bot"
-    #- git config --global --add safe.directory /builds/platfrom-team/kubernetes-platform/kubernetes-infrastructure/observability/hostcheck-inventory-stage
+    - git config user.email "bot@gitops.asax.ir"
+    - git config user.name "GitLab CI Bot"
+
     # Extract the SSH URL from .gitmodules and convert it to HTTPS format using provided auth variables
-    #- SUBMODULE_SSH_URL=$(git config --file .gitmodules --get submodule.hostcheck.url)
-    #- SUBMODULE_HTTPS_URL=$(echo $SUBMODULE_SSH_URL | sed -e "s/git@\(.*\):/https:\/\/$GITLAB_AUTH_USERNAME:$GITLAB_AUTH_TOKEN@\1\//")
-    #- git config submodule.hostcheck.url "$SUBMODULE_HTTPS_URL"
-    #- git submodule update --init --recursive --remote
+    - SUBMODULE_SSH_URL=$(git config --file .gitmodules --get submodule.hostcheck.url)
+    - SUBMODULE_HTTPS_URL=$(echo $SUBMODULE_SSH_URL | sed -e "s/git@\(.*\):/https:\/\/$GITLAB_AUTH_USERNAME:$GITLAB_AUTH_TOKEN@\1\//")
+    - git config submodule.hostcheck.url "$SUBMODULE_HTTPS_URL"
+    - git submodule update --init --recursive --remote
     #- ls
     #- pwd
     #- cd hostcheck
