Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,6 +66,7 @@ ansible_run:
     - SUBMODULE_SSH_URL=$(git config --file .gitmodules --get submodule.hostcheck.url)
     - SUBMODULE_HTTPS_URL=$(echo $SUBMODULE_SSH_URL | sed -e "s/git@\(.*\):/https:\/\/$GITLAB_AUTH_USERNAME:$GITLAB_AUTH_TOKEN@\1\//")
 #    - git config submodule.hostcheck.url "$SUBMODULE_HTTPS_URL"
+    - git config --global --add safe.directory /builds/platfrom-team/kubernetes-platform/kubernetes-infrastructure observability/hostcheck-inventory-stage
     - git submodule update --init --recursive --remote
     #- ls
     #- pwd
